# meta-core

./: CMakeLists.txt  README.md  any.h  arraydatasource.cpp  arraydatasource.h  computedata.cpp  computedata.h  computeunit.h  dataset.h  datasource.cpp  datasource.h  jsonhelper.cpp  jsonhelper.h
